fix: make NFC write result import atomic